# Harness-driven-LCA-dev-agents

./: .env.example  .gitignore  AGENT.md  README.md  _launch_gui.bat  _setup_env.bat  main.py  pyproject.toml
.codex/: AGENTS.md  config.toml
.codex/agents/: eval-reviewer.toml  lca-quality-evaluator.toml  major-orchestrator.toml  opencode_lca_user.toml  sub-executor.toml
.github/workflows/: sync-wiki.yml
.opencode/: opencode.json
.opencode/agents/: LCI-designer.md  eval-reviewer.md  major-executor.md  major-orchestrator.md  plan-maker.md  project-explorer.md  sub-executor.md
.opencode/commands/: cleanup-lci.md  design-lci.md  import-lci.md  init-rag-database.md  make-plan.md  revise-plan.md  whole-lca.md
GUI/: TODO.md  config.py
GUI/functions/: README.md
GUI/ui/: README.md  ui_main.py
docs/: TODO.md  env_setup.md  project_prep.md  rag_guide.md  setup_guide.md  常用指令与提示词.md
docs/dev/: .gitignore
docs/lang_CN/: 常用指令与提示词.md
docs/plan/: README.md  quality-gates.md
docs/wiki/: Home.md  README.md  _Sidebar.md  env_setup.md  manual_debug.md  project_prep.md  rag_guide.md  user_guide.md
harness/: .gitignore
harness/knowledge/: .gitignore
harness/rules/: README.md  knowledge-retrieval.md  openlca-mcp.md
harness/specs/: README.md
harness/workflow_run/: __init__.py  validation.py
input/: .gitignore  plan.md
input/files/: README.md
scripts/: TODO.md  _launch_gui.bat  _setup_env.bat
scripts/clean_dir/: clean_dir.py  config.py  main.py
scripts/debug_gui/: launch_gui.ps1
src/: .gitignore
uploads/: .gitignore
workspace/: .gitignore
(+582 files in other folders)
