[project]
name = "202606-harness-agent-lca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=7.3.0",
    "langchain-text-splitters>=1.1.2",
    "markitdown[all]>=0.1.6",
    "matplotlib>=3.11.0",
    "openai>=2.41.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "olca-ipc>=2.0.0",
    "seaborn>=0.13.2",
    "gradio>=6.19.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv]
prerelease = "allow"

